--- a/Docker/Caddy_V2ray/docker-compose.yml
+++ b/Docker/Caddy_V2ray/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   v2ray:
-    image: rico93/v2ray_v3:go_pay
+    image: rico93/v2ray_v3:go
     restart: always
     network_mode: "host"
     environment:
